--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json": "^10.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
